[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/ModMaker/ModMaker.gd" type="Script" id=1]
[ext_resource path="res://GlobalTheme.tres" type="Theme" id=2]

[node name="ModMaker" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 638.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FilterLine" type="LineEdit" parent="HBoxContainer/VBoxContainer"]
margin_right = 638.0
margin_bottom = 23.0
placeholder_text = "Filter files"

[node name="Tree" type="Tree" parent="HBoxContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 638.0
margin_bottom = 694.0
size_flags_horizontal = 3
size_flags_vertical = 3
select_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 697.0
margin_right = 638.0
margin_bottom = 720.0

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
visible = false
margin_right = 58.0
margin_bottom = 20.0
text = "Update"

[node name="AddFilesButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 638.0
margin_bottom = 23.0
size_flags_horizontal = 3
text = "Add files into mod"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 641.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemList" type="ItemList" parent="HBoxContainer/VBoxContainer2"]
margin_right = 639.0
margin_bottom = 642.0
size_flags_horizontal = 3
size_flags_vertical = 3
select_mode = 1

[node name="RemoveFilesButton" type="Button" parent="HBoxContainer/VBoxContainer2"]
margin_top = 645.0
margin_right = 639.0
margin_bottom = 668.0
text = "Remove files"

[node name="ExportModeSelector" type="OptionButton" parent="HBoxContainer/VBoxContainer2"]
margin_top = 671.0
margin_right = 639.0
margin_bottom = 694.0
text = "Gather files into one folder (Create a .zip archive yourself)"
items = [ "Gather files into one folder (Create a .zip archive yourself)", null, false, 0, null, "Export as .pck file", null, false, 1, null ]
selected = 0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
margin_top = 697.0
margin_right = 639.0
margin_bottom = 720.0

[node name="MakeModButton" type="Button" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_right = 79.0
margin_bottom = 23.0
text = "Make mod"

[node name="ModNameEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 82.0
margin_right = 639.0
margin_bottom = 23.0
size_flags_horizontal = 3
text = "NewMod"

[connection signal="text_entered" from="HBoxContainer/VBoxContainer/FilterLine" to="." method="_on_FilterLine_text_entered"]
[connection signal="item_selected" from="HBoxContainer/VBoxContainer/Tree" to="." method="_on_Tree_item_selected"]
[connection signal="multi_selected" from="HBoxContainer/VBoxContainer/Tree" to="." method="_on_Tree_multi_selected"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/AddFilesButton" to="." method="_on_AddFilesButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/RemoveFilesButton" to="." method="_on_RemoveFilesButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/HBoxContainer/MakeModButton" to="." method="_on_MakeModButton_pressed"]
